--- a/src/components/start.module.css
+++ b/src/components/start.module.css
@@ -4,14 +4,20 @@
     height: 60px;
     width: 220px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
 }
 
 .cell {
     border: 1px solid #ccc;
     flex: 0 0 33.333333%;
-    padding: 15px 10px 10px 10px;
+    padding: 20px 10px 10px 10px;
     box-sizing: border-box;
+    margin-left: -1px;
+    margin-top: -1px;
+    font-size: 20px;
+}
+
+.cell:hover {
+    background-color: #f6f6f6;
 }
 
 .center {
@@ -23,12 +29,22 @@
     padding: 15px;
 }
 
-.x {
-    color: blue;
+.x, .X {
+    color: #007399;
     font-weight: 800;
 }
 
-.o {
-    color: red;
+.o, .O {
+    color: #ff4d4d;
     font-weight: 800;
+}
+
+.results {
+    color: #007399;
+    margin-bottom: 10px;
+}
+
+.header {
+    border: 1px dashed #007399;
+    margin-bottom: 40px;
 }
